--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Designing From Errors</title>
+  <title>Java Less Carousel</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/modules.css" rel="stylesheet">
@@ -14,7 +14,7 @@
   <section class="max-length">
 
     <div class="carousel">
-      <input class="carousel-input" type="radio" name="mamals" id="arsinoitherium-control">
+      <input class="carousel-input" type="radio" name="mamals" id="arsinoitherium-control" checked>
       <input class="carousel-input" type="radio" name="mamals" id="elasmotherium-control">
       <input class="carousel-input" type="radio" name="mamals" id="glyptodon-control">
       <input class="carousel-input" type="radio" name="mamals" id="megatherium-control">
@@ -38,18 +38,18 @@
           </div>
         </div>
 
-      <ul class="carousel-controls">
+      <ul class="carousel-controls list-group-inline pin-cb w-1 text-center push-0 island-1-2">
         <li>
-          <label class="carousel-btn" for="arsinoitherium-control">Arsinoitherium</label>
+          <label class="carousel-btn icon i-18 ir" for="arsinoitherium-control">Arsinoitherium</label>
         </li>
         <li>
-          <label class="carousel-btn" for="elasmotherium-control">Elasmotherium</label>
+          <label class="carousel-btn icon i-18 ir" for="elasmotherium-control">Elasmotherium</label>
         </li>
         <li>
-          <label class="carousel-btn" for="glyptodon-control">Glyptodon</label>
+          <label class="carousel-btn icon i-18 ir" for="glyptodon-control">Glyptodon</label>
         </li>
         <li>
-          <label class="carousel-btn" for="megatherium-control">Megatherium</label>
+          <label class="carousel-btn icon i-18 ir" for="megatherium-control">Megatherium</label>
         </li>
       </div>
 
